fix link wrap

--- a/mono.css
+++ b/mono.css
@@ -22,44 +22,31 @@
 a.mono,
 .mono-all a {
   position: relative;
+  /* margin-right: 0.5rem; */
   text-decoration: none;
   outline: none;
+  border-bottom: 0.25rem solid var(--mono-main);
 }
-a.mono:before,
-.mono-all a:before {
-  content: "";
-  position: absolute;
-  bottom: -0.4rem;
-  left: 0;
-  width: 100%;
-  height: 0.6rem;
-  z-index: 1;
+a.mono:after,
+.mono-all a:after {
+  content: "00";
+  color: transparent;
   background-color: var(--mono-main);
   clip-path: polygon(
-    0 40%,
-    calc(100% - 0.5rem) 40%,
-    calc(100% - 0.5rem) 0%,
-    100% 50%,
-    calc(100% - 0.5rem) 100%,
-    calc(100% - 0.5rem) 60%,
-    0 60%
+    25% 25%,
+    75% 50%,
+    25% 75%
   );
 }
-a.mono:visited:before,
-.mono-all a:visited:before {
-  clip-path: polygon(
-    0 40%,
-    calc(100% - 0.5rem) 40%,
-    calc(100% - 0.5rem) 0%,
-    100% 0%,
-    100% 100%,
-    calc(100% - 0.5rem) 100%,
-    calc(100% - 0.5rem) 60%,
-    0 60%
-  );
+/* a.mono:visited,
+.mono-all a:visited {
+} */
+a.mono:focus,
+.mono-all a:focus {
+  border-color: transparent;
 }
-a.mono:focus:after,
-.mono-all a:focus:after {
+a.mono:focus:before,
+.mono-all a:focus:before {
   content: "";
   position: absolute;
   top: 0;
@@ -80,8 +67,8 @@ a.mono:focus:after,
     100% 0.25rem
   );
 }
-a.mono:active:after,
-.mono-all a:active:after {
+a.mono:active:before,
+.mono-all a:active:before {
   background-image: repeating-linear-gradient(
     -45deg,
     transparent 0 3px,
